# krum

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .python-version  ARCHITECTURE.md  IMPROVEMENTS_DRAFT.md  README.md  aggregators.md  histogram.py  pyproject.toml  reproduce.py  todo.md  train.py
.github/workflows/: ci.yml  documentation.yml  release.yml
aggregators/: __init__.py  average.py  brute.py  bulyan.py  krum.py  median.py
analysis/: byzantine_momentum_analysis.md  byzantine_robust_gossip_analysis.md  byzfl_analysis.md  decor_analysis.md  papers_overview.md  robust_collaborative_learning_analysis.md  rpel_bf2d_analysis.md  signguard_analysis.md
attacks/: __init__.py  identical.py  nan.py
docs/: Makefile  aggregators.rst  architecture.rst  attacks.rst  conf.py  contributors.rst  experiments.rst  index.rst  install.rst  make.bat  native.rst  overview.rst  tools.rst
docs/_build/html/: aggregators.html  architecture.html  attacks.html  contributors.html  experiments.html  genindex.html  index.html  install.html  native.html  overview.html  py-modindex.html  search.html  searchindex.js  tools.html
docs/_build/html/_modules/: aggregators.html  attacks.html  index.html  tools.html
docs/_build/html/_modules/aggregators/: average.html  brute.html  bulyan.html  krum.html  median.html
docs/_build/html/_modules/attacks/: identical.html  nan.html
docs/_build/html/_modules/experiments/: checkpoint.html  configuration.html  dataset.html  loss.html  model.html  optimizer.html
docs/_build/html/_modules/experiments/datasets/: svm.html
docs/_build/html/_modules/experiments/models/: simples.html
docs/_build/html/_modules/tools/: jobs.html  misc.html  pytorch.html
docs/_build/html/_static/: custom-icon.js  custom.css
docs/_build/html/aggregators/: index.html
docs/_build/html/aggregators/classes/: average.html  brute.html  bulyan.html  krum.html  median.html
docs/_build/html/attacks/: index.html
docs/_build/html/attacks/classes/: identical.html  nan.html
docs/_build/html/experiments/: index.html
docs/_build/html/experiments/classes/: checkpoint.html  configuration.html  dataset.html  datasets.html  loss.html  model.html  models.html  optimizer.html
docs/_build/html/explanation/: byzantine-resilience.html  cli-format.html  debug-mode.html  key-concepts.html  native-compilation.html  tensor-lifecycle.html
docs/_build/html/how-to/: add-aggregator.html  add-attack.html  add-custom-dataset.html  add-custom-model.html  add-dataset.html  add-model.html  enable-native.html  index.html  run-experiment-campaign.html
docs/_build/html/reference/: architecture.html  native.html
docs/_build/html/reference/aggregators/: index.html
docs/_build/html/reference/aggregators/classes/: average.html  brute.html  bulyan.html  krum.html  median.html
docs/_build/html/reference/attacks/: index.html
docs/_build/html/reference/attacks/classes/: identical.html  nan.html
docs/_build/html/reference/experiments/: index.html
docs/_build/html/reference/experiments/classes/: checkpoint.html  configuration.html  dataset.html  datasets.html  loss.html  model.html  models.html  optimizer.html
docs/_build/html/reference/tools/: index.html
docs/_build/html/reference/tools/classes/: jobs.html  misc.html  pytorch.html
docs/_build/html/tools/: index.html
docs/_build/html/tools/classes/: jobs.html  misc.html  pytorch.html
docs/_build/html/tutorials/: benchmarking-aggregators.html  getting-started.html  index.html
docs/_static/: custom.css  external-links.js
docs/aggregators/: index.rst
docs/aggregators/classes/: average.rst  brute.rst  bulyan.rst  krum.rst  median.rst
docs/attacks/: index.rst
docs/attacks/classes/: identical.rst  nan.rst
docs/experiments/: index.rst
docs/experiments/classes/: checkpoint.rst  configuration.rst  dataset.rst  datasets.rst  loss.rst  model.rst  models.rst  optimizer.rst
docs/explanation/: byzantine-resilience.rst  cli-format.rst  debug-mode.rst  key-concepts.rst  native-compilation.rst  tensor-lifecycle.rst
docs/how-to/: add-aggregator.rst  add-attack.rst  add-custom-dataset.rst  add-custom-model.rst  add-dataset.rst  add-model.rst  enable-native.rst  index.rst  run-experiment-campaign.rst
docs/reference/: architecture.rst  native.rst
docs/reference/aggregators/: index.rst
docs/reference/aggregators/classes/: average.rst  brute.rst  krum.rst  median.rst
docs/reference/attacks/: index.rst
docs/reference/experiments/: index.rst
docs/reference/experiments/classes/: checkpoint.rst  model.rst
docs/reference/tools/: index.rst
docs/reference/tools/classes/: pytorch.rst
docs/tools/: index.rst
docs/tools/classes/: jobs.rst  misc.rst  pytorch.rst
docs/tutorials/: benchmarking-aggregators.rst  getting-started.rst  index.rst
experiments/: __init__.py  checkpoint.py  configuration.py  dataset.py  loss.py  model.py  optimizer.py
experiments/datasets/: svm.py
experiments/models/: simples.py
krum/: __init__.py
krum/aggregators/: __init__.py  average.py  base.py  brute.py  bulyan.py  krum.py  median.py  registry.py
krum/attacks/: __init__.py  base.py  identical.py  nan.py  registry.py
krum/experiments/: __init__.py  checkpoint.py  configuration.py  dataset.py  loss.py  model.py  optimizer.py
krum/experiments/datasets/: svm.py
krum/experiments/models/: simples.py
krum/native/: README.md  __init__.py
krum/native/py_bulyan/: bulyan.cu
krum/tools/: __init__.py  jobs.py  misc.py  pytorch.py
native/: .gitignore  README.md  __init__.py
notes/: adr-01.md
tools/: __init__.py  jobs.py  misc.py  pytorch.py
