[project]
name = "krum"
version = "0.1.0"
description = "Byzantine-resilient aggregation rules for distributed machine learning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.9",
    "ninja>=1.13.0",
    "numpy>=2.2.6",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[dependency-groups]
docs = [
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-favicon>=1.0.1",
    "sphinx-togglebutton>=0.3.2",
    "sphinx-contributors>=0.3.0",
    "shibuya>=2026.1.9",
]
