[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krum"
version = "0.1.0"
description = "Byzantine-resilient aggregation rules for distributed machine learning."
readme = "README.md"
requires-python = ">=3.10,<3.15"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "Sébastien Rouault", email = "sebastien.rouault@alumni.epfl.ch"},
    {name = "Arthur Danjou", email = "arthur.danjou@dauphine.eu"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "matplotlib>=3.10.9",
    "ninja>=1.13.0",
    "numpy>=2.2.6",
    "pandas>=2.0.0",
    "requests>=2.33.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9.0",
    "ty>=0.0.34",
    "sphinx>=8.1.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-favicon>=1.0.1",
    "sphinx-togglebutton>=0.3.2",
    "sphinx-contributors>=0.3.0",
    "shibuya>=2026.1.9",
]

[project.urls]
Homepage = "https://github.com/calicarpa/krum"
Repository = "https://github.com/calicarpa/krum"
Issues = "https://github.com/calicarpa/krum/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["krum*"]

[tool.setuptools.package-data]
"krum.native" = ["**/*.hpp", "**/*.cpp", "**/*.cu", "**/*.h", "**/*.deps", "**/.placeholder"]

[tool.ruff]
target-version = "py310"
line-length = 120
exclude = [
    "repositories",
    ".venv",
    ".git",
    ".ruff_cache",
    "build",
    "dist",
]
fix = true
show-fixes = true
preview = true

[tool.ruff.lint]
explicit-preview-rules = true
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "RET",  # flake8-return
]
ignore = [
    "E402",  # module level import not at top of file (intentional in this codebase)
    "E501",  # line too long (handled by formatter)
    "UP031", # percent format (legacy codebase, too noisy to fix now)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports (re-exports)

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
